Update CourseServiceTest.java